@tool
extends "../loot_table_row.gd"

## Ingredients shop table type:
## [ {
##    "quantity": int,
##    "cost": int,
##    "item": Ingredient
## } ]


func _on_rarity_changed(index):
	super(index)
	pass #TODO Replace with function body.


func _on_ingredient_changed(index):
	pass #TODO Replace with function body.


func _on_quantity_changed(value):
	pass #TODO Replace with function body.


func _on_cost_changed(value):
	pass #TODO Replace with function body.
